@@ -22,5 +22,6 @@
     "1.1.43",
     "1.1.59",
     "1.1.61",
-    "1.1.65"
+    "1.1.65",
+    "1.1.66"
 ]
