@@ -7,6 +7,7 @@ Date: 00. 00. 0000
     - Bumped the required Factorio version to 1.1.79
   Bugfixes:
     - Fixed recipe move buttons not being enabled correctly when subfloors are folded out
+    - (Hopefully) fixed a crash due to migration issues for subfactories in archive
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.65
